@@ -225,6 +225,8 @@ Improvements:
      - Use mmap/munmap for image data allocation on system that have mmap.
      - Add iterator for walking child of smart objects, table and a box.
      - Use Eina_Spinlock for Evas_ScaleCache, Evas_Async_Events and Image_Entry.
+    * Ecore:
+     - Use Eina_Spinlock for Ecore_Thread.
     * Ecore_Con:
      - Rebase dns.c against upstream
      - URL support now dynamically loads libcurl at runtime via eina_module.
